Added automatically model builder and CSV parser